Fri Apr 30 19:10:03 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* bearoff.texi: add MD5 checksum for 13pt one-sided database
	and add warning about 2 GB limit.

Sun Nov 16 20:05:38 2003  Oystein Johansen  <oystein@gnubg.org>

        * New files from Achim:
	absrating.texi    faq.texi          install.texi      saving.texi
	additional.texi   fdl.texi          intro.texi        scripting.texi
	analyse.texi      gnubg.texi        movefilters.texi  settings.texi
	bearoff.texi      id.texi           opening.texi      starting.texi
	cubeful.texi      impatient.texi    playing.texi      training.texi
	export.texi       import.texi       rules.texi        version.texi

Thu Sep 25 22:45:38 2003  Oystein Johansen  <oystein@gnubg.org>

        * faq.texi: Moved the Mailing list guidelined to 
	http://www.gnubg.org/resources/mailinglist/

Thu Sep 18 21:02:38 2003  Oystein Johansen  <oystein@gnubg.org>

        * faq.texi: Commit Achim's file
	* gnubg.texi: Don't include FAQ in main manual

Sat Sep  6 17:04:13 2003  Joern Thyssen  <jth@gnubg.org>

	* absrating.texi, *.png: add Kees' chapter on abs. ratings.

Sun Jul 27 15:10:38 2003  Oystein Johansen  <oystein@gnubg.org>

	* rules.texi (New file): Tom Keith's rules

Sun Jun 15 11:33:38 2003  Joern Thyssen  <jth@gnubg.org>

	* cubeful.texi: add new chapter on cubeful equities.

Sun Apr  6 23:27:02 2003  Joern Thyssen  <jth@gnubg.org>

	* bearoff.texi: update chapter on bearoff databases.

Wed Jan  8 21:50:20 2003  Joern Thyssen  <jth@gnubg.org>

	* bearoff.texi: update chapter to latest version of gnubg.

Thu Dec 26 00:18:10 2002  Joern Thyssen  <jth@gnubg.org>

	* bearoff.texi: add better size estimates for one-sided databases.

Sun Dec 22 00:10:28 2002  Joern Thyssen  <jth@freeshell.org>

	* bearoff.texi: add some MD5 checksums.

Sun Dec 22 00:05:16 2002  Joern Thyssen  <jth@freeshell.org>

	* movefilters.texi: new file
	* gnubg.texi: add subsection on move filters.
	* Makefile.am: new file
